2023-02-28
    Solved bug parsing compacted lists of points such as 8.2.3 (must be 8.2 and 0.3).
    Reported by gtoal.
2022-12-12
    Updated docs to v0.72
2022-12-05
    Added the mode parameter to the MsvgTransformCookedElement function, it can be
    0 (or MSVGTCE_NORMAL) or a ored combination of MSVGTCE_CIR2PATH, MSVGTCE_ELL2PATH
    the first create path elements for circle elements, the second create path
    elements for ellipse elements. It can be used for graphics libraries that doesn't
    have primitives to draw circles and ellipses, like GD.
2022-11-20
    Updated docs to v0.71
2022-11-19
    New gd subdirectory with examples to render svg files using the GD library
    and libmgrx. A bit incomplete but it works
2022-11-18
    Added svg2png.c program to MGRX test programs
2022-10-20
    Hack to MGRX for drawing path elements with subpaths, check if every polygon
    is inside the last polygon and use the background color, so glyphs like "ià"
    can be rendered.
2022-08-01
    Updated docs to v0.70
2022-07-10
    New functions:
      void MsvgGetInheritedFontFamily(const MsvgElement *el, int *ifont_family,
                                      char **sfont_family);
    Added bfontlib funcionality with new functions:
      int MsvgBFontLibLoad(MsvgElement *el);
      int MsvgBFontLibLoadFromFile(char *fname);
      MsvgBFont *MsvgBFontLibFind(char *sfont_family, int ifont_family);
      void MsvgBFontLibFree(void);
      MsvgElement *MsvgTextToPathGroupUsingBFontLib(MsvgElement *el);
      int MsvgBFontLibGetNumOfFonts(void);
      MsvgBFont *MsvgBFontLibGetBFontByNumber(int nfont);
      void MsvgBFontLibSetDefaultBfont(int nfont);
    Changed test/tfont.c and mgrx/showsvg.c to use the fontlib functions.
2022-07-06
    Moved MsvgProcPaintCtxInheritance(MsvgPaintCtx and
    MsvgProcPaintCtxDefaults from sec/serializ.c to src/paintctx.c
    New functions:
      double MsvgGetCharAdvx(long unicode, double font_size, MsvgBFont *bfont);